--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body{
     padding: 22px 36px 22px 0;
     background-color: #C4C4C4;
     max-width: 1400px;
-    background-image: url("../img/back1.png");
+    background-image: url("img/back1.png");
     background-repeat: no-repeat;
 }
 .menu{
@@ -112,7 +112,7 @@ letter-spacing: 3px;
     padding: 22px 36px 22px 0;
     background-color: #C4C4C4;
     max-width: 1400px;
-    background-image: url("../img/back2.png");
+    background-image: url("img/back2.png");
     background-repeat: no-repeat;
 }
 
@@ -197,7 +197,7 @@ letter-spacing: 3px;
     padding: 22px 36px 22px 0;
     background-color: #C4C4C4;
     max-width: 1400px;
-    background-image: url("../img/back3.png");
+    background-image: url("img/back3.png");
     background-repeat: no-repeat;
 }
 .in_all4{
